--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -241,7 +241,6 @@
     <string name="system_apps_drawer">Cajón de aplicaciones del sistema</string>
     <string name="download_apps_drawer">Cajón de aplicaciones descargadas</string>
 
-    <string name="toggle_soft_keyboard">Alternar teclado</string>
     <string name="show_soft_keyboard">Mostrar teclado</string>
     <string name="hide_soft_keyboard">Ocultar teclado</string>
 
@@ -525,5 +524,14 @@
     <string name="action_toast">Toast</string>
     <string name="icon_color">Icon color</string>
     <string name="user_not_supported">Current user is not supported!!!</string>
+    <string name="action_play_sound">Play sound</string>
+    <string name="action_vibrate">Vibrate</string>
+    <string name="alarm">Alarm</string>
+    <string name="notification">Notification</string>
+    <string name="ringtone">Ringtone</string>
+    <string name="stop_play_sound">Stop play sound</string>
+    <string name="vibrate_duration">Vibrate duration</string>
+    <string name="repeat">Repeat</string>
+    <string name="play_once">Once</string>
 
 </resources>
