--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -435,7 +435,6 @@
     <string name="action_soft_keyboard">Програмная Клавиатура</string>
     <string name="hide_soft_keyboard">Скрыть программную клавиатуру</string>
     <string name="show_soft_keyboard">Показать програмную клавиатуру</string>
-    <string name="toggle_soft_keyboard">Включить програмную клавиатуру</string>
     <string name="action_successive_adjust">Последовательная корректировка</string>
     <string name="adjust_scroll">Прокрутка</string>
     <string name="down_f">%1$s вниз</string>
@@ -476,6 +475,15 @@
     <string name="action_toast">Toast</string>
     <string name="icon_color">Icon color</string>
     <string name="user_not_supported">Current user is not supported!!!</string>
+    <string name="action_play_sound">Play sound</string>
+    <string name="action_vibrate">Vibrate</string>
+    <string name="alarm">Alarm</string>
+    <string name="notification">Notification</string>
+    <string name="ringtone">Ringtone</string>
+    <string name="stop_play_sound">Stop play sound</string>
+    <string name="vibrate_duration">Vibrate duration</string>
+    <string name="repeat">Repeat</string>
+    <string name="play_once">Once</string>
 
 
 </resources>
