--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -376,7 +376,7 @@
     <string name="general">General</string>
     <string name="verbose">Detallado</string>
     <string name="as_default">Por defecto</string>
-    <string name="system_default">as system default</string>
+    <string name="system_default">System default</string>
     <string name="force_no_nav_bar">Force no navigation bar</string>
     <string name="force_has_nav_bar">Force has navigation bar</string>
 
