--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -50,7 +50,7 @@
     <string name="edge_bottom_center">Borde inferior central</string>
     <string name="edge_bottom_right">Borde inferior derecho</string>
 
-    <string name="edge_left">Borde izquiero</string>
+    <string name="edge_left">Borde izquierdo</string>
     <string name="edge_right">Borde derecho</string>
     <string name="edge_top">Borde superior</string>
     <string name="edge_bottom">Borde inferior</string>
@@ -117,7 +117,7 @@
     <string name="action_screenshot">Captura de pantalla</string>
     <string name="action_power_menu">Menú de encendido</string>
     <string name="action_reboot">Reiniciar</string>
-    <string name="action_soft_reboot">Reinicio suave</string>
+    <string name="action_soft_reboot">Reinicio rápido</string>
     <string name="action_shutdown">Apagar</string>
     <string name="action_last_app">Última aplicación</string>
     <string name="action_previous_app">Aplicación anterior</string>
@@ -126,7 +126,7 @@
     <string name="action_kill_app">Detener aplicación</string>
     <string name="action_app_option_menu">Menú de opciones de la aplicación</string>
     <string name="action_clear_background_apps">Detener apps en segundo plano</string>
-    <string name="action_refreeze">Refreeze apps in freezer</string>
+    <string name="action_refreeze">Recongelar aplicaciones en el congelador</string>
     <string name="action_location">Modo ubicación</string>
     <string name="action_ringer_mode">Modo timbre</string>
     <string name="action_auto_brightness">Brillo automático</string>
@@ -156,7 +156,7 @@
     <string name="action_running_apps_drawer">Cajón de aplicaciones en ejecución</string>
     <string name="action_side_bar">Barra lateral</string>
     <string name="action_custom_panel">Panel personalizado</string>
-    <string name="action_inject_key_event">Inject key event</string>
+    <string name="action_inject_key_event">Insertar simulación de tecla</string>
     <string name="action_inject_gesture">Insertar gesto</string>
     <string name="action_inject_text">Insertar texto</string>
     <string name="action_notify">Notificación</string>
@@ -181,7 +181,7 @@
     <string name="action_editable_action">Seleccionar y editar</string>
 
     <string name="toggle">Alternar</string>
-    <string name="turn_on">Enceder</string>
+    <string name="turn_on">Encender</string>
     <string name="turn_off">Apagar</string>
     <!-- %1$s: action label -->
     <string name="turn_on_f">Encender %1$s</string>
@@ -246,15 +246,15 @@
 
     <!-- conditional -->
     <string name="conditional">Condicional</string>
-    <string name="conditional_if">if (si)</string>
-    <string name="conditional_then">then (entonces)</string>
-    <string name="conditional_else">else (sino)</string>
+    <string name="conditional_if">Si (if)</string>
+    <string name="conditional_then">Entonces (then)</string>
+    <string name="conditional_else">Sino (else)</string>
 
     <!-- conditions -->
     <string name="condition_invalid">No válido</string>
-    <string name="condition_and">And</string>
-    <string name="condition_or">Or</string>
-    <string name="condition_not">Not</string>
+    <string name="condition_and">Y (and)</string>
+    <string name="condition_or">O (or)</string>
+    <string name="condition_not">No (not)</string>
     <string name="condition_screen_on">Pantalla activada</string>
     <string name="condition_keyguard_on">Bloqueo de teclado activado</string>
     <string name="condition_auto_brightness">Brillo automático</string>
@@ -354,7 +354,7 @@
     <string name="pen_colors">Colores del bolígrafo</string>
     <string name="sound_effect">Efecto de sonido</string>
     <string name="vibrate_effect">Efecto de vibración</string>
-    <string name="vibrate_strength">Vibrate strength</string>
+    <string name="vibrate_strength">Fuerza de la vibración</string>
     <string name="effect_only_screen_on">Sound/vibrate only when screen on</string>
     <string name="toast_level">Toast level</string>
     <string name="visual_effect">Efecto visual</string>
@@ -376,8 +376,8 @@
     <string name="general">General</string>
     <string name="verbose">Detallado</string>
     <string name="as_default">Por defecto</string>
-    <string name="system_default">System default</string>
-    <string name="force_no_nav_bar">Force no navigation bar</string>
+    <string name="system_default">Predeterminado del sistema</string>
+    <string name="force_no_nav_bar">No forzar la barra de navegación</string>
     <string name="force_has_nav_bar">Force has navigation bar</string>
 
     <string name="gestures_triggers_when_swiping_on_hint">Pie/slide adjust/gesture pointer can be triggered by swipe.</string>
@@ -397,7 +397,7 @@
     <string name="perform">Realizar</string>
     <string name="launch">Lanzar</string>
     <string name="stop_app">Detener</string>
-    <string name="put_on_launcher">Put on launcher</string>
+    <string name="put_on_launcher">Añadir a la pantalla de inicio</string>
     <string name="app_info">Informacion de la applicacion</string>
     <string name="unfreeze">Descongelar</string>
     <string name="freeze">Congelar</string>
@@ -422,7 +422,7 @@
     <string name="select_second_condition">Por favor seleccione la segunda condición</string>
     <string name="time_from">De</string>
     <string name="time_to">A</string>
-    <string name="last_day_of_month">Last</string>
+    <string name="last_day_of_month">Último</string>
     <string name="rename">Renombrar</string>
     <string name="delete">Eliminar</string>
     <string name="enter_name">Ingresar nombre</string>
@@ -448,10 +448,10 @@
     <string name="command_on_system_process">Runs on system process</string>
     <string name="su_not_supported_on_system">"su" not supported to run on system process.</string>
     <string name="run_command_failed">No se pudo ejecutar el comando:&#160;</string>
-    <string name="action_info">Action info</string>
+    <string name="action_info">Información de la acción</string>
     <string name="text_copied">Texto copiado.</string>
     <string name="sound">Sound</string>
-    <string name="vibrate">Vibrate</string>
+    <string name="vibrate">Vibrar</string>
     <string name="light">Light</string>
     <string name="pie_slide_adjust_support">Pie/slide adjust/gesture pointer only for gesture long press/double click, or swipes if not enabled swipe triggers after finger upped.</string>
     <string name="app_may_not_has_default_activity">App may not has default activity</string>
@@ -469,11 +469,11 @@
     <string name="permission_denied">Permiso denegado!</string>
     <string name="memory_released_size_f">Memoria liberada: %1$dM.</string>
     <!-- %1$s: app label -->
-    <string name="app_frozen_f">Frozen: %1$s</string>
-    <string name="app_thawed_f">Thawed: %1$s</string>
-    <string name="error_freeze_app_f">Failed to freeze app: %1$s</string>
-    <string name="error_thaw_app_f">Failed to thaw app: %1$s</string>
-    <string name="view_on_play_store">View on play store</string>
+    <string name="app_frozen_f">Congelado: %1$s</string>
+    <string name="app_thawed_f">Descongelado: %1$s</string>
+    <string name="error_freeze_app_f">Error al congelar la aplicación: %1$s</string>
+    <string name="error_thaw_app_f">Error al descongelar la aplicación: %1$s</string>
+    <string name="view_on_play_store">Ver en la Play Store</string>
     <string name="collect_activity">Collect activity</string>
     <string name="collect_activity_with_params">Collect activity with parameters</string>
     <string name="confirm_freeze">Confirm to freeze!</string>
@@ -482,20 +482,20 @@
     <string name="action">Acción:</string>
     <string name="label">Etiqueta:</string>
     <string name="icon">Icono:</string>
-    <string name="built_in">Built-in icons</string>
-    <string name="gallery_apps">Gallery apps</string>
-    <string name="app_icons">App icons</string>
-    <string name="saved_icons">Saved icons</string>
-    <string name="empty_as_default">Empty as default</string>
+    <string name="built_in">Iconos incorporados</string>
+    <string name="gallery_apps">Aplicaciones de galería</string>
+    <string name="app_icons">Iconos de aplicaciones</string>
+    <string name="saved_icons">Iconos guardados</string>
+    <string name="empty_as_default">Dejar vacío para etiqueta predeterminada</string>
     <string name="only_if_keyguard_not_secure">Dismiss keyguard only if keyguard not secure.</string>
     <string name="no_alarm">Ninguna alarma.</string>
     <string name="next_alarm">Siguiente alarma</string>
-    <string name="as_week">As week</string>
-    <string name="as_date">As date</string>
-    <string name="modify_months">Modify months</string>
-    <string name="modify_days_of_month">Modify days of months</string>
+    <string name="as_week">Planificar por semana</string>
+    <string name="as_date">Planificar por fecha</string>
+    <string name="modify_months">Modificar meses</string>
+    <string name="modify_days_of_month">Modificar días del mes</string>
     <string name="show_value">Mostrar valor</string>
-    <string name="variable_name_hint">Variable name contains letters, numbers, _ and $, not start with number.</string>
+    <string name="variable_name_hint">El nombre de la variable contiene letras, números, _ y $, tampoco debe iniciar con un número.</string>
     <string name="variable_expression_hint" formatted="false"><![CDATA[Variable:\n  32 bit signed integer.\nSupported operators:\n  +, -, *, /, %, <<, >>, &, ^, |, ~, ++, --.\n  Same as C/C++/Java…\nExample:\n  (var + 1) % 2]]></string>
 
     <!-- help -->
@@ -516,15 +516,15 @@
 
     <string name="app_started">iniciado</string>
     <string name="app_stopped">detenido</string>
-    <string name="action_clipboard">Clipboard</string>
-    <string name="clip_history_size">Clipboard history size</string>
+    <string name="action_clipboard">Portapapeles</string>
+    <string name="clip_history_size">Tamaño del historial del portapapeles</string>
     <string name="input_expression">Input expression</string>
-    <string name="redo">Redo</string>
-    <string name="undo">Undo</string>
+    <string name="redo">Rehacer</string>
+    <string name="undo">Deshacer</string>
     <string name="action_toast">Toast</string>
-    <string name="icon_color">Icon color</string>
+    <string name="icon_color">Color del icono</string>
     <string name="user_not_supported">Current user is not supported!!!</string>
-    <string name="action_play_sound">Play sound</string>
+    <string name="action_play_sound">Reproducir sonido</string>
     <string name="action_vibrate">Vibrate</string>
     <string name="alarm">Alarm</string>
     <string name="notification">Notification</string>
