--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -312,7 +312,6 @@
     <string name="key_long_click_timeout">Uzun tıklama zaman aşımı</string>
     <string name="gesture_pointer_scale">Hareket göstergesi ölçeği</string>
     <string name="gesture_pointer_color">Hareket göstergesi rengi</string>
-    <string name="gesture_pointer_reverse_order">Hareket göstergesinin sırasını ters çevir</string>
     <string name="screen_filter_color">Ekran filtresi rengi</string>
     <string name="panel_color">Panel rengi</string>p
     <string name="pie_color">Pasta dilimi rengi</string>
@@ -530,6 +529,30 @@
     <string name="vibrate_duration">Vibrate duration</string>
     <string name="repeat">Repeat</string>
     <string name="play_once">Once</string>
+    <string name="action_floating_widget">Floating widget</string>
+    <string name="delete_all">Delete all</string>
+    <string name="invalid_widget">Invalid widget!</string>
+    <string name="widgets">Widgets</string>
+    <string name="select_floating_widget">Select floating widget</string>
+    <string name="save_clip_data">Save clipboard data</string>
+    <string name="save_clip_data_hint">Shutdown(reboot) via command line is not supported.</string>
+    <string name="gesture_pointer_modes">Gesture pointer modes</string>
+    <string name="mode_double_tap">Double tap mode</string>
+    <string name="mode_long_press">Long press mode</string>
+    <string name="mode_tap">Tap mode</string>
+    <string name="mode_transform">Transform mode</string>
+    <string name="export_as_command">Export as command</string>
+    <string name="variables">Variables</string>
+    <string name="allows_perform_by_broadcast">Allows perform by broadcast</string>
+    <string name="perform_by_broadcast_not_allowed">Perform by broadcast not allowed!</string>
+    <string name="tutorial_online">Tutorial online</string>
+    <string name="disable_gesture_on_keyguard">Disable gesture on keyguard</string>
+    <string name="slide_adjust_color">Slide adjust color</string>
+    <string name="disable_auto_brightness_when_brightness_adjusted">Disable auto brightness when brightness adjusted</string>
+    <string name="screenshot_fullscreen">Screenshot fullscreen</string>
+    <string name="screenshot_selected_region">Screenshot selected region</string>
+    <string name="effect_sound">Effect sound</string>
+    <string name="action_split_screen">Split screen</string>
 
 
 </resources>
