--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="action_expand_notifications_panel">Expand notifications panel</string>
     <string name="action_expand_quick_settings_panel">Expand quick settings panel</string>
     <string name="action_fast_scroll">Fast scroll</string>
+    <string name="action_split_screen">Split screen</string>
     <string name="action_screenshot">Screenshot</string>
     <string name="action_power_menu">Power menu</string>
     <string name="action_reboot">Reboot</string>
@@ -142,13 +143,13 @@
     <string name="action_wifi_ap">Wifi AP</string>
     <string name="action_airplane_mode">Airplane mode</string>
     <string name="action_immersive_nav_bar">Hide navigation bar</string>
-    <string name="action_immersive_status_bar">Show status bar</string>
+    <string name="action_immersive_status_bar">Hide status bar</string>
     <string name="action_keep_screen_on">Stay awake</string>
     <string name="action_torch">Torch</string>
     <string name="action_screen_filter">Screen filter</string>
     <string name="action_gesture_record">Gesture record</string>
-    <string name="action_gesture_enabled">Gesture enabled</string>
-    <string name="action_key_enabled">Key enabled</string>
+    <string name="action_gesture_enabled">Gesture control</string>
+    <string name="action_key_enabled">Key control</string>
     <string name="action_rotate_screen">Rotate screen</string>
     <string name="action_dismiss_keyguard">Unlock keyguard</string>
     <string name="action_soft_keyboard">Soft keyboard</string>
@@ -159,6 +160,7 @@
     <string name="action_running_apps_drawer">Running apps drawer</string>
     <string name="action_side_bar">Side bar</string>
     <string name="action_custom_panel">Custom panel</string>
+    <string name="action_floating_widget">Floating widget</string>
     <string name="action_inject_key_event">Inject key event</string>
     <string name="action_inject_gesture">Inject gesture</string>
     <string name="action_inject_text">Input text</string>
@@ -185,6 +187,7 @@
     <string name="action_saved_multi_action">Saved multi-action</string>
     <string name="action_action_collection">Action collection</string>
     <string name="action_editable_action">Select and edit</string>
+
     <string name="toggle">Toggle</string>
     <string name="turn_on">Turn on</string>
     <string name="turn_off">Turn off</string>
@@ -250,6 +253,9 @@
     <string name="show_soft_keyboard">Show soft keyboard</string>
     <string name="hide_soft_keyboard">Hide soft keyboard</string>
 
+    <string name="screenshot_fullscreen">Screenshot fullscreen</string>
+    <string name="screenshot_selected_region">Screenshot selected region</string>
+
     <!-- conditional -->
     <string name="conditional">Conditional</string>
     <string name="conditional_if">if</string>
@@ -273,8 +279,8 @@
     <string name="condition_sync_on">Sync on</string>
     <string name="condition_wifi_ap_on">Wifi ap on</string>
     <string name="condition_airplane_mode_on">Airplane mode on</string>
-    <string name="condition_gesture_enabled">Gesture enabled</string>
-    <string name="condition_key_enabled">Key enabled</string>
+    <string name="condition_gesture_enabled">Gesture control on</string>
+    <string name="condition_key_enabled">Key control on</string>
     <string name="condition_power_connected">Power connected</string>
     <string name="condition_wifi_connected">Wifi connected</string>
     <string name="condition_net_connected">Net connected</string>
@@ -346,20 +352,25 @@
     <string name="swipe_triggers_after_finger_upped">Swipe triggers after finger upped</string>
     <string name="distance_to_trigger_swipe">Distance to trigger swipe</string>
     <string name="disable_gesture_on_soft_keyboard">Disable gesture on soft keyboard</string>
+    <string name="disable_gesture_on_keyguard">Disable gesture on keyguard</string>
     <string name="gesture_double_tap_timeout">Gesture double tap timeout</string>
     <string name="gesture_long_press_timeout">Gesture long press timeout</string>
     <string name="key_double_click_timeout">Double click timeout</string>
     <string name="key_long_click_timeout">Long click timeout</string>
+    <string name="clip_history_size">Clipboard history size</string>
+    <string name="save_clip_data">Save clipboard data</string>
     <string name="scroll_speed">Scrolling speed of successive adjust</string>
+    <string name="gesture_pointer_modes">Gesture pointer modes</string>
     <string name="gesture_pointer_scale">Gesture pointer scale</string>
-    <string name="gesture_pointer_reverse_order">Reverse gesture order of gesture pointer</string>
     <string name="gesture_pointer_color">Gesture pointer color</string>
     <string name="screen_filter_color">Screen filter color</string>
     <string name="panel_color">Panel color</string>
     <string name="pie_color">Pie color</string>
+    <string name="slide_adjust_color">Slide adjust color</string>
     <string name="icon_color">Icon color</string>
     <string name="pen_colors">Pen colors</string>
     <string name="sound_effect">Sound effect</string>
+    <string name="effect_sound">Effect sound</string>
     <string name="vibrate_effect">Vibrate effect</string>
     <string name="vibrate_strength">Vibrate strength</string>
     <string name="vibrate_duration">Vibrate duration</string>
@@ -370,7 +381,9 @@
     <string name="show_text_on_side_bar">Show text on side bar</string>
     <string name="show_text_on_other_drawers">Show text on other drawers</string>
     <string name="notify_for_actions">Notify for actions</string>
+    <string name="disable_auto_brightness_when_brightness_adjusted">Disable auto brightness when brightness adjusted</string>
     <string name="auto_freeze_only_app_died">Auto freeze only when app died</string>
+    <string name="allows_perform_by_broadcast">Allows perform by broadcast</string>
     <string name="force_nav_bar_state">Force navigation bar state(need reboot)</string>
 
     <string name="dark_theme">Dark</string>
@@ -387,6 +400,7 @@
     <string name="system_default">System default</string>
     <string name="force_no_nav_bar">Force no navigation bar</string>
     <string name="force_has_nav_bar">Force has navigation bar</string>
+    <string name="save_clip_data_hint">Shutdown(reboot) via command line is not supported.</string>
 
     <string name="gestures_triggers_when_swiping_on_hint">Pie/slide adjust/gesture pointer can be triggered by swipe.</string>
     <string name="gestures_triggers_when_swiping_off_hint">You can cancel a swipe by swipe back.</string>
@@ -400,6 +414,7 @@
     <string name="select_condition">Select condition</string>
     <string name="select_focused_app">Select focused app</string>
     <string name="select_icon">Select icon</string>
+    <string name="select_floating_widget">Select floating widget</string>
 
     <string name="select">Select</string>
     <string name="perform">Perform</string>
@@ -460,6 +475,7 @@
     <string name="su_not_supported_on_system">su not supported run on system process.</string>
     <string name="run_command_failed">Failed to run command:&#160;</string>
     <string name="action_info">Action info</string>
+    <string name="export_as_command">Export as command</string>
     <string name="text_copied">Text copied.</string>
     <string name="sound">Sound</string>
     <string name="vibrate">Vibrate</string>
@@ -505,6 +521,7 @@
     <string name="as_date">As date</string>
     <string name="modify_months">Modify months</string>
     <string name="modify_days_of_month">Modify days of months</string>
+    <string name="variables">Variables</string>
     <string name="show_value">Show value</string>
     <string name="variable_name_hint">Variable name contains letters, numbers, _ and $, not start with number.</string>
     <string name="variable_expression_hint" formatted="false"><![CDATA[Variable:\n  32 bit signed integer.\nSupported operators:\n  +, -, *, /, %, <<, >>, &, ^, |, ~, ++, --.\n  Same as C/C++/Java…\nExample:\n  (var + 1) % 2]]></string>
@@ -514,10 +531,17 @@
     <string name="play_once">Once</string>
     <string name="repeat">Repeat</string>
     <string name="action_clipboard">Clipboard</string>
-    <string name="clip_history_size">Clipboard history size</string>
     <string name="input_expression">Input expression</string>
     <string name="redo">Redo</string>
     <string name="undo">Undo</string>
+    <string name="widgets">Widgets</string>
+    <string name="invalid_widget">Invalid widget!</string>
+    <string name="delete_all">Delete all</string>
+    <string name="mode_tap">Tap mode</string>
+    <string name="mode_long_press">Long press mode</string>
+    <string name="mode_double_tap">Double tap mode</string>
+    <string name="mode_transform">Transform mode</string>
+    <string name="perform_by_broadcast_not_allowed">Perform by broadcast not allowed!</string>
 
     <!-- help -->
     <string name="help_how_to_set">How to set(click to learn):</string>
@@ -530,6 +554,7 @@
     <string name="help_item_6">- Now, swipe from the left center to right, the action [Back] will perform if module activated.</string>
 
     <string name="visit_xda_thread">Visit XDA thread</string>
+    <string name="tutorial_online">Tutorial online</string>
     <string name="add_translation_or_fix">Add translation or fix</string>
 
     <!-- untranslatable -->
